Split Ball/BallBehaviourScript.cs and SpinnerCollisionBehaviourScript.cs so, it's easier to understand also, there's some kind of error from the code Nick and my dad made together I still don't know why it's there

--- a/TwoAndAHalfD/Assembly-CSharp.csproj
+++ b/TwoAndAHalfD/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="Assets\Background\BackgroundBehaviourScript.cs" />
     <Compile Include="Assets\Ball\BallBehaviourScript.cs" />
+    <Compile Include="Assets\Ball\SpinnerCollisionBehaviourScript.cs" />
     <Compile Include="Assets\Camera\CameraBehavior.cs" />
     <Compile Include="Assets\Peg\PegLayoutBehavior.cs" />
     <Compile Include="Assets\Score\ScoreBehavior.cs" />
